Refactoring and adding delete resource method
