# src/main/resources/openapi/documentation.yaml
@@ -1,23 +1,230 @@
 openapi: "3.0.3"
 info:
-  title: "Application API"
-  description: "Application API"
+  title: "com_kemp_k8s_api API"
+  description: "com_kemp_k8s_api API"
   version: "1.0.0"
 servers:
-  - url: "http://0.0.0.0:8080"
+- url: "https://com_kemp_k8s_api"
 paths:
   /:
     get:
-      description: "Hello World!"
+      description: ""
       responses:
         "200":
           description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Kubernetes API developed in Kotlin using the Official Kubernetes\
+                    \ Java Client"
+  /api/{cluster}/apiresources:
+    get:
+      description: ""
+      parameters:
+      - name: "cluster"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "500":
+          description: "Internal Server Error"
           content:
             text/plain:
               schema:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Hello World!"
+                  value: ""
+        "200":
+          description: "OK"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+  /api/{cluster}/version:
+    get:
+      description: ""
+      parameters:
+      - name: "cluster"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+        "200":
+          description: "OK"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+  /api/cluster/{clusterName}/{resource}/{resourceName}:
+    delete:
+      description: ""
+      parameters:
+      - name: "namespace"
+        in: "query"
+        required: false
+        schema:
+          type: "string"
+      - name: "clusterName"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "resource"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "resourceName"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+        "200":
+          description: "OK"
+          content:
+            text/plain:
+              schema:
+                $ref: "#/components/schemas/DynamicKubernetesObject"
+    get:
+      description: ""
+      parameters:
+      - name: "namespace"
+        in: "query"
+        required: false
+        schema:
+          type: "string"
+      - name: "resourceName"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "clusterName"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "resource"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+        "200":
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                type: "string"
+  /api/manager/cluster:
+    delete:
+      description: ""
+    post:
+      description: ""
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/KubeClientEntity"
+        required: true
+      responses:
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+                Example#3:
+                  value: ""
+                Example#4:
+                  value: ""
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+  /api/manager/clusters:
+    get:
+      description: ""
+      responses:
+        "200":
+          description: "OK"
+          content:
+            text/plain:
+              schema:
+                type: "array"
+                items:
+                  type: "string"
 components:
   schemas:
+    JsonObject:
+      type: "object"
+      properties: {}
+    DynamicKubernetesObject:
+      type: "object"
+      properties:
+        raw:
+          $ref: "#/components/schemas/JsonObject"
+    KubeClientEntity:
+      type: "object"
+      properties:
+        name:
+          type: "string"
+        url:
+          type: "string"
+        token:
+          type: "string"
+        kubeConfig:
+          type: "string"
+        withToken:
+          type: "boolean"
+        withServiceAccount:
+          type: "boolean"
+        withKubeConfig:
+          type: "boolean"
